k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio

spec:
  replicas: 2

  selector:
    matchLabels:
      app: portfolio

  template:
    metadata:
      labels:
        app: portfolio

    spec:
      containers:
      - name: portfolio

        image: minhnhat24112001/portfolio:latest

        ports:
        - containerPort: 3000
