k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolioe

spec:
  selector:
    app: portfolio
  ports:
  - port: 80
    targetPort: 3000

  type: LoadBalancer
