k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: portfolio

spec:
  rules:
  - host: 14.225.220.87.nip.io

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: portfolio

            port:
              number: 80
